add openapi support

--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,9 @@ dependencies {
     implementation 'io.quarkus:quarkus-hibernate-orm'
     implementation 'io.quarkus:quarkus-hibernate-validator'
     implementation 'io.quarkus:quarkus-resteasy-reactive'
-    implementation 'io.quarkus:quarkus-smallrye-jwt'
     implementation 'io.quarkus:quarkus-reactive-pg-client'
+    implementation 'io.quarkus:quarkus-smallrye-jwt'
+    implementation 'io.quarkus:quarkus-smallrye-openapi'
     implementation 'io.quarkus:quarkus-smallrye-jwt-build'
     // implementation 'io.quarkus:quarkus-elytron-security-oauth2'
     implementation 'io.quarkus:quarkus-arc'
