--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,8 @@ quarkus.datasource.jdbc.max-size=16
 
 # drop-and-create drop and create the database at startup (use `update`  to only update the schema)
 quarkus.hibernate-orm.database.generation=update
+# drop-and-create
+quarkus.hibernate-orm.log.sql=false
 
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=https://opensponsor.com
