--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,9 +8,11 @@ quarkus.datasource.jdbc.url=jdbc:postgresql://127.0.0.1:5432/opensponsor
 quarkus.datasource.jdbc.max-size=16
 
 # drop-and-create drop and create the database at startup (use `update`  to only update the schema)
-quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.database.generation=drop-and-create
 # drop-and-create
 quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
+
 
 mp.jwt.verify.publickey.location=publicKey.pem
 mp.jwt.verify.issuer=https://opensponsor.com
