--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,13 @@ quarkus.datasource.username=huojianying
 quarkus.datasource.password=123456
 quarkus.datasource.jdbc.url=jdbc:postgresql://127.0.0.1:5432/opensponsor
 quarkus.datasource.jdbc.max-size=16
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:4200
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTION
+#quarkus.http.cors.headers=X-Custom
+#quarkus.http.cors.exposed-headers=Content-Disposition
+#quarkus.http.cors.access-control-max-age=24H
+#quarkus.http.cors.access-control-allow-credentials=true
 
 # drop-and-create drop and create the database at startup (use `update`  to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
