update organization filter

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTION
 # drop-and-create drop and create the database at startup (use `update`  to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
 # drop-and-create
-quarkus.hibernate-orm.log.sql=false
+quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 
