--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
-# datasource configuration
-
+quarkus.profile=prod,dev
 # datasource configuration
 quarkus.datasource.db-kind=postgresql
-quarkus.datasource.username=huojianying
-quarkus.datasource.password=123456
+quarkus.datasource.username=postgres
+quarkus.datasource.password=postgres
 quarkus.datasource.jdbc.url=jdbc:postgresql://127.0.0.1:5432/opensponsor
 quarkus.datasource.jdbc.max-size=16
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:4200
-quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTION
+quarkus.http.cors.access-control-allow-credentials=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
 #quarkus.http.cors.headers=X-Custom
 #quarkus.http.cors.exposed-headers=Content-Disposition
 #quarkus.http.cors.access-control-max-age=24H
@@ -21,7 +21,7 @@ quarkus.hibernate-orm.log.sql=true
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 
-mp.jwt.verify.publickey.location=publicKey.pem
+mp.jwt.verify.publickey.location=jwt/publicKey.pem
 mp.jwt.verify.issuer=https://opensponsor.com
-quarkus.native.resources.includes=publicKey.pem
-smallrye.jwt.sign.key.location=privateKey.pem
+quarkus.native.resources.includes=jwt/publicKey.pem
+smallrye.jwt.sign.key.location=jwt/privateKey.pem
