--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ quarkus.http.cors.methods=GET,PUT,POST,DELETE,OPTIONS
 # drop-and-create drop and create the database at startup (use `update`  to only update the schema)
 quarkus.hibernate-orm.database.generation=drop-and-create
 # drop-and-create
-quarkus.hibernate-orm.log.sql=true
+quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
 
 
@@ -25,3 +25,11 @@ mp.jwt.verify.publickey.location=jwt/publicKey.pem
 mp.jwt.verify.issuer=https://opensponsor.com
 quarkus.native.resources.includes=jwt/publicKey.pem
 smallrye.jwt.sign.key.location=jwt/privateKey.pem
+
+
+alioss.domain=https://visionbagel.oss-cn-beijing.aliyuncs.com
+# %dev.alipay.notify-url=""
+%dev.alipay.return-url=http://localhost:5173/payment
+
+%prod.alipay.notify-url=http://api.visionbagel.com/payment/notify
+%prod.alipay.return-url=https://visionbagel.com/payment
