--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,5 +31,7 @@ alioss.domain=https://visionbagel.oss-cn-beijing.aliyuncs.com
 # %dev.alipay.notify-url=""
 %dev.alipay.return-url=http://localhost:5173/payment
 
-%prod.alipay.notify-url=http://api.visionbagel.com/payment/notify
+%prod.alipay.notify-url=http://api.visionbagel.com/payment/alipay-notify
 %prod.alipay.return-url=https://visionbagel.com/payment
+
+%prod.wechatPay.notify-url=http://api.visionbagel.com/payment/wehat-notify
