--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'org.apache.commons:commons-beanutils2:2.0.0-M1'
     // ali end
     implementation 'com.github.wechatpay-apiv3:wechatpay-java:0.2.17'
+    implementation 'com.github.wechatpay-apiv3:wechatpay-apache-httpclient:0.6.0'
 
     testImplementation 'io.quarkus:quarkus-junit5'
     testImplementation 'io.rest-assured:rest-assured'
