--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,7 +29,7 @@ smallrye.jwt.sign.key.location=jwt/privateKey.pem
 
 alioss.domain=https://visionbagel.oss-cn-beijing.aliyuncs.com
 # %dev.alipay.notify-url=""
-%dev.alipay.return-url=http://localhost:5173/payment
+%dev.alipay.return-url=http://localhost:4200/payment/alipay-callback
 
 %prod.alipay.notify-url=http://api.visionbagel.com/payment/alipay-notify
 %prod.alipay.return-url=https://visionbagel.com/payment
