update user password

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,7 +19,7 @@ quarkus.hibernate-orm.database.generation=drop-and-create
 # drop-and-create
 quarkus.hibernate-orm.log.sql=false
 quarkus.hibernate-orm.physical-naming-strategy=org.hibernate.boot.model.naming.CamelCaseToUnderscoresNamingStrategy
-
+quarkus.hibernate-orm.jdbc.timezone=Asia/Shanghai
 
 mp.jwt.verify.publickey.location=jwt/publicKey.pem
 mp.jwt.verify.issuer=https://opensponsor.com
