--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,7 @@ indent_size = 4
 indent_style = space
 trim_trailing_whitespace = true
 insert_final_newline = true
+ij_java_block_comment_at_first_column = false
 
 [*.md]
 trim_trailing_whitespace = false
